--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Vdom69.github.io/Hookah-shop",
   "dependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
@@ -58,6 +59,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -85,6 +88,7 @@
     "@webpack-cli/generators": "^3.0.0",
     "babel-loader": "^9.1.0",
     "envify": "^4.1.0",
+    "gh-pages": "^4.0.0",
     "terser": "^5.16.0",
     "uglifyify": "^5.0.0",
     "webpack-cli": "^5.0.0"
